--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "mapbox-gl": "^2.6.1",
+    "moment": "^2.29.1",
     "ngx-material-timepicker": "^3.3.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
